[tool.poetry]
name = "lr3"
version = "0.1.0"
description = ""
authors = ["nikto_b <nikto_b@newt.team>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
alphabet-detector = "^0.0.7"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
